--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "jspdf": "^2.5.2",
+    "jspdf-html2canvas": "^1.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
