--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "extenso": "^2.0.1",
     "js-base64": "^3.7.7",
     "jspdf": "^2.5.2",
     "jspdf-html2canvas": "^1.5.2",
