--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "js-base64": "^3.7.7",
     "jspdf": "^2.5.2",
     "jspdf-html2canvas": "^1.5.2",
+    "jwt-decode": "^4.0.0",
     "path-browserify": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
